// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ItemPanel 1`] = `
<div>
  <div
    class="inv-item-panel"
  >
    <table
      class="item-tbl"
      id="inv-item-tbl"
    >
      <tbody>
        <tr />
      </tbody>
    </table>
    <div
      class="item-btn"
    >
      <button
        id="add-item"
      >
        <svg
          class="bi bi-basket2-fill"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.929 1.757a.5.5 0 1 0-.858-.514L2.217 6H.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h.623l1.844 6.456A.75.75 0 0 0 3.69 15h8.622a.75.75 0 0 0 .722-.544L14.877 8h.623a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1.717L10.93 1.243a.5.5 0 1 0-.858.514L12.617 6H3.383L5.93 1.757zM4 10a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm3 0a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm4-1a1 1 0 0 0-1 1v2a1 1 0 1 0 2 0v-2a1 1 0 0 0-1-1z"
            fill-rule="evenodd"
          />
        </svg>
        Add Item
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render ItemPanel 2`] = `
<div>
  <div
    class="inv-item-panel"
  >
    <table
      class="item-tbl"
      id="inv-item-tbl"
    >
      <tbody>
        <tr />
      </tbody>
    </table>
    <div
      class="item-btn"
    >
      <select
        class="item_ddl"
      >
        <option
          selected=""
          value="Select Items"
        >
          Select Items
        </option>
        <option
          value="0"
        >
          Jmp
        </option>
      </select>
    </div>
  </div>
</div>
`;
